<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.davidhaas.mazesolver.MainActivity"
    android:background="#78909C">

    <ImageView
        android:id="@+id/imgBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha=".07"
        android:scaleType="center"/>

    <TextView
        android:id="@+id/textView"

        android:text="@string/title"
        android:textAllCaps="false"
        android:textSize="50sp"
        android:textAlignment="center"
        android:textColor="#283135"

        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginTop="24dp"

        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Button
        android:id="@+id/takePhotoButton"
        android:background="@drawable/custom_button"

        android:text="@string/take_photo"
        android:textAllCaps="false"
        android:textColor="#262626"
        android:textSize="19sp"

        android:layout_marginTop="24dp"
        android:layout_width="210dp"
        android:layout_height="60dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <Button
        android:id="@+id/loadPhotoButton"
        android:background="@drawable/custom_button"

        android:text="@string/load_photo"
        android:textAllCaps="false"
        android:textColor="#262626"
        android:textSize="19sp"

        android:layout_marginTop="24dp"
        android:layout_width="210dp"
        android:layout_height="60dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/takePhotoButton" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="270dp" />


</android.support.constraint.ConstraintLayout>
